<resources>
    <string name="app_name">menghitungLuas</string>
    <string name="_0">0</string>


    <string-array name="dropdown_stasiun_hujan">
        <!--<item> Koefisien </item>-->
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="android_dropdown_arrays">
        <!--<item> Koefisien </item>-->
        <item>0.10</item>
        <item>0.15</item>
        <item>0.20</item>
        <item>0.25</item>
        <item>0.30</item>
        <item>0.35</item>
        <item>0.40</item>
        <item>0.45</item>
        <item>0.50</item>
        <item>0.55</item>
        <item>0.60</item>
        <item>0.65</item>
        <item>0.70</item>
        <item>0.75</item>
        <item>0.80</item>
        <item>0.85</item>
        <item>0.90</item>
        <item>0.95</item>
    </string-array>
    <string name="title_activity_main5">Main5Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul"><![CDATA[ANALISIS VOLUME LONG STORAGE BADAN SUNGAI BERBASIS APLIKASI ANDROID]]></string>
    <string name="tentang_deskripsi">
        Aplikasi ini dibuat oleh Kartika Sri Rahayu, mahasiswa program studi Teknik Sipil, Universitas Pembangungan Jaya.
        \n\n
            Aplikasi ini bernama iVolos adalah aplikasi yang dapat digunakan untuk melakukan perhitungan <i>volume long storage</i> badan sungai. <i>Long Storage</i> adalah bangunan penahan air yang berfungsi menyimpan air di dalam sungai, kanal dan atau parit pada lahan yang relatif datar dengan cara menahan aliran untuk menaikkan permukaan air sehingga dapat mempermudah dan mempercepat perhitungan langkah - langkah untuk melakukan perhitungan tersedia di halaman "Bantuan"
    </string>
    <string name="deskripsi_volume">Long storage adalah suatu bangunan yang dibangun untuk menanggulangi masalah banjir. dalam bahasa inggris long yang berarti panjang dan storage berarti penyimpanan, jadi long storage adalah penyimpanan panjang yang berfungsi untuk membuat resapan sehingga tidak menjadi beban aliran permukaan pada saat sungai meluap.</string>
    <string name="debit_deskripsi">Metode rasional adalah jika curah hujan dengan intensitas I terjadi secara terus-menerus, maka laju limpasan langsung akan bertambah sampai mencapai waktu konsentrasi tc. Untuk pemilihan metode perhitungan hebit hujan memakai Metode Rasional</string>
    <string name="intensitas_deskripsi">Intensitas hujan adalah tingginya atau pada kedalaman air hujan per satuan waktu. Sifat umum dari hujan adalah semakin singkat waktu hujan berlangsung intensitasnya cenderung makin tinggi dan makin besar periode ulangnya makin tinggi pula intensitasnya. Untuk pemilihan metode perhitungan intensitas hujan memakai Metode Mononobe.</string>
    <string name="backWater_deskripsi">Secara umum metoda tahapan dinyatakan dengan membagi saluran menjadi bagian-bagian saluran yang pendek, lalu menghitung secara bertahap dari satu ujung ke ujung saluran lainnya.Perhitungan back water memilih metode dari direct step method</string>
    <string name="rerata_deskripsi">Metode ini berdasarkan rata-rata timbangan (weighted average). Metode polygon thiessen ini memberi proporsi terhadap luasan daerah pengaruh stasiun hujan untuk mengakomodasi ketidaksamaan pada jarak. Metode ini didasarkan pada asumsi bahwa variasi hujan antara stasiun hujan yang satu dengan lainnya adalah linear dan stasiun hujannya dianggap dapat mewakili kawasan terdekat (Suripin, 2004).Untuk pemilihan metode perhitungan curah hujan rata-rata memakai Metode Polygon Thiessen</string>
    <string name="image_intensitas">image_intensitas</string>
    <string name="close">close</string>
    <string name="titik2">...</string>
    <string name="hasil">Hasil</string>
    <string name="mm">mm</string>
    <string name="deskripsi_gumbel">Metode Gumbel diciptakan oleh E.J.Gumbel pada tahun 1941. Metode Gumbel banyak digunakan untuk analisis data maksimum, pada metode ini data yang diolah diasumsikan mempunyai seberan tertentu yang disebut sebaran Gumbel.</string>
    <string name="_25">25</string>
    <string name="_100">100</string>
    <string name="_50">50</string>
    <string name="_200">200</string>
    <string name="_1000">1000</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
</resources>
